<resources>
    <string name="app_name">LogIn</string>
    <string name="login_enter">Entrar</string>
    <string name="login_remember">Recordarme</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_email_hint">Email</string>
    <string name="login_close_description">Boton de cierre de app</string>
    <string name="login_tittle">Acceso</string>
    <string name="login_loading">Cargando</string>
    <string name="login_no_exist_mail">No existe el email</string>
    <string name="login_no_exist_password">No existe la contraseña</string>
    <string name="login_no_exist_user">No existen usuario ni contraseña</string>
    <string name="login_correct_user">Datos correctos</string>
    <string name="welcome_tittle">Mis datos</string>
    <string name="welcome_name_tittle">Nombre</string>
    <string name="welcome_name">Paco</string>
    <string name="welcome_mail_tittle">Email</string>
    <string name="welcome_mail">Paco@gmail.com</string>
    <string name="welcome_image__avatar_description">Avatar del usuario</string>
    <string name="welcome_close">Cerrar sesion</string>
    <string name="welcome_dialog_tittle">Cerrar sesion</string>
    <string name="welcome_dialog_message">¿Desea salir?</string>
    <string name="welcome_yes">Si</string>
    <string name="welcome_no">No</string>
</resources>