<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <!--    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/loginStartGuideline"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->


    <TextView
        android:id="@+id/loginLabelHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tittle"
        app:layout_constraintBottom_toBottomOf="@id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/loginBtnClose"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/login_close_description"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/loginInputPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.038">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/loginSwitchRemember"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:focusable="false"
        android:text="@string/login_remember"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout1" />

    <Button
        android:id="@+id/loginBtnEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/login_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSwitchRemember" />

</androidx.constraintlayout.widget.ConstraintLayout>